fix(plugin): fix illegal access exception caused by libby